--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "bootstrap": "^5.2.3",
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "sass": "^1.62.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
