--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "sass": "^1.62.0",
     "typescript": "5.0.4"
