--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "@types/react-transition-group": "^4.4.5",
     "bootstrap": "^5.2.3",
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
@@ -21,11 +22,15 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-transition-group": "^4.4.5",
+    "remove": "^0.1.5",
     "sass": "^1.62.0",
     "swiper": "^9.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.25"
+    "@types/react-redux": "^7.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0"
   }
 }
