fix: footer component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
     "tsconfigRootDir": "__dirname"
   },
   "plugins": ["@typescript-eslint"],
-  "root": true
+  "root": true,
+  "rules": {
+    "@typescript-eslint/no-floating-promises": "off"
+  }
 }
