--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
+    "i18next": "^22.4.14",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-tooltip": "^5.11.1",
