--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "remove": "^0.1.5",
     "sass": "^1.62.0",
     "swiper": "^9.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
