--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,19 +3,25 @@
     "next/core-web-vitals",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:storybook/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": true,
     "tsconfigRootDir": "__dirname"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "root": true,
   "rules": {
     "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/explicit-function-return-type": ["error", {
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
         "allowExpressions": true
-      }]
-    }
+      }
+    ]
+  }
 }
