--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -27,14 +29,25 @@
     "react-tooltip": "^5.11.1",
     "react-transition-group": "^4.4.5",
     "remove": "^0.1.5",
-    "sass": "^1.62.0",
     "swiper": "^9.2.0",
     "typescript": "^5.0.4",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^7.0.7",
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-interactions": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-styling": "^1.0.5",
+    "@storybook/blocks": "^7.0.7",
+    "@storybook/nextjs": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0"
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "sass": "^1.62.1",
+    "storybook": "^7.0.7"
   }
 }
