--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@storybook/addon-docs": "^7.0.7",
+    "@storybook/theming": "^7.0.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
@@ -20,6 +22,8 @@
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
     "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +33,7 @@
     "react-tooltip": "^5.11.1",
     "react-transition-group": "^4.4.5",
     "remove": "^0.1.5",
+    "storybook-dark-mode": "^3.0.0",
     "swiper": "^9.2.0",
     "typescript": "^5.0.4",
     "use-debounce": "^9.0.4"
@@ -48,6 +53,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-plugin-storybook": "^0.6.11",
     "sass": "^1.62.1",
-    "storybook": "^7.0.7"
+    "storybook": "^7.0.7",
+    "storybook-react-i18next": "^2.0.1"
   }
 }
