--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-transition-group": "^4.4.5",
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
+    "i18next": "^22.4.15",
     "next": "13.3.0",
     "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-tooltip": "^5.11.1",
