--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "@types/react-transition-group": "^4.4.5",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.4.0",
     "eslint": "8.22.0",
     "eslint-config-next": "13.3.0",
     "i18next": "^22.4.14",
