--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "storybook": "storybook dev -p 6006 -s ./public",
-        "build-storybook": "storybook build public",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
         "start-storybook": "storybook -s ./public"
     },
     "dependencies": {
@@ -59,6 +59,7 @@
         "sass": "^1.62.1",
         "storybook": "^7.0.7",
         "storybook-addon-i18n": "^5.1.13",
+        "storybook-addon-next": "^1.8.0",
         "storybook-react-i18next": "^2.0.1"
     }
 }
