--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react": "18.0.34",
         "@types/react-dom": "18.0.11",
         "@types/react-transition-group": "^4.4.5",
+        "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
         "eslint": "8.22.0",
         "eslint-config-next": "13.3.0",
