--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-redux": "^8.0.5",
         "react-transition-group": "^4.4.5",
         "remove": "^0.1.5",
+        "sharp": "^0.32.1",
         "storybook-dark-mode": "^3.0.0",
         "swiper": "^9.2.0",
         "tippy.js": "^6.3.7",
