--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "start-storybook": "storybook -s ./public"
     },
     "dependencies": {
+        "@react-oauth/google": "^0.11.0",
         "@reduxjs/toolkit": "^1.9.3",
         "@storybook/addon-docs": "^7.0.7",
         "@storybook/theming": "^7.0.7",
@@ -27,6 +28,7 @@
         "i18next-browser-languagedetector": "^7.0.1",
         "i18next-http-backend": "^2.2.0",
         "i18next-xhr-backend": "^3.2.2",
+        "jwt-decode": "^3.1.2",
         "next": "13.3.0",
         "next-i18next": "^13.2.2",
         "react": "18.2.0",
@@ -34,6 +36,7 @@
         "react-i18next": "^12.2.2",
         "react-icons": "^4.8.0",
         "react-redux": "^8.0.5",
+        "react-social-icons": "^5.15.0",
         "react-transition-group": "^4.4.5",
         "remove": "^0.1.5",
         "storybook-dark-mode": "^3.0.0",
