--- a/package.json
+++ b/package.json
@@ -1,70 +1,61 @@
 {
-    "name": "ivi-clone",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "start-storybook": "storybook -s ./public"
-    },
-    "dependencies": {
-        "@react-oauth/google": "^0.11.0",
-        "@reduxjs/toolkit": "^1.9.3",
-        "@storybook/addon-docs": "^7.0.7",
-        "@storybook/theming": "^7.0.7",
-        "@tippyjs/react": "^4.2.6",
-        "@types/node": "18.15.11",
-        "@types/react": "18.0.34",
-        "@types/react-dom": "18.0.11",
-        "@types/react-transition-group": "^4.4.5",
-        "axios": "^1.4.0",
-        "eslint": "8.22.0",
-        "eslint-config-next": "13.3.0",
-        "i18next": "^22.4.15",
-        "i18next-browser-languagedetector": "^7.0.1",
-        "i18next-http-backend": "^2.2.0",
-        "i18next-xhr-backend": "^3.2.2",
-        "jwt-decode": "^3.1.2",
-        "next": "13.3.0",
-        "next-i18next": "^13.2.2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-i18next": "^12.2.2",
-        "react-icons": "^4.8.0",
-        "react-redux": "^8.0.5",
-        "react-social-icons": "^5.15.0",
-        "react-transition-group": "^4.4.5",
-        "remove": "^0.1.5",
-        "sharp": "^0.32.1",
-        "storybook-dark-mode": "^3.0.0",
-        "swiper": "^9.2.0",
-        "swr": "^2.1.5",
-        "tippy.js": "^6.3.7",
-        "typescript": "^5.0.4",
-        "use-debounce": "^9.0.4"
-    },
-    "devDependencies": {
-        "@storybook/addon-actions": "^7.0.7",
-        "@storybook/addon-essentials": "^7.0.7",
-        "@storybook/addon-interactions": "^7.0.7",
-        "@storybook/addon-links": "^7.0.7",
-        "@storybook/addon-styling": "^1.0.5",
-        "@storybook/blocks": "^7.0.7",
-        "@storybook/nextjs": "^7.0.7",
-        "@storybook/react": "^7.0.7",
-        "@storybook/testing-library": "^0.0.14-next.2",
-        "@types/react-redux": "^7.1.25",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
-        "eslint-plugin-storybook": "^0.6.11",
-        "sass": "^1.62.1",
-        "storybook": "^7.0.7",
-        "storybook-addon-i18n": "^5.1.13",
-        "storybook-addon-next": "^1.8.0",
-        "storybook-react-i18next": "^2.0.1"
-    }
+  "name": "ivi-clone",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "storybook-static": "storybook dev -p 6006 -s ../public"
+  },
+  "dependencies": {
+    "@react-oauth/google": "^0.11.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tippyjs/react": "^4.2.6",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "@types/react-transition-group": "^4.4.5",
+    "axios": "^1.4.0",
+    "eslint": "8.22.0",
+    "eslint-config-next": "13.3.0",
+    "i18next": "^22.4.15",
+    "i18next-http-backend": "^2.2.0",
+    "jwt-decode": "^3.1.2",
+    "next": "13.3.0",
+    "next-i18next": "^13.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-social-icons": "^5.15.0",
+    "react-transition-group": "^4.4.5",
+    "remove": "^0.1.5",
+    "sharp": "^0.32.1",
+    "swiper": "^9.2.0",
+    "swr": "^2.1.5",
+    "tippy.js": "^6.3.7",
+    "typescript": "^5.0.4",
+    "use-debounce": "^9.0.4"
+  },
+  "devDependencies": {
+    "@storybook/addon-docs": "^7.0.9",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/nextjs": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react-redux": "^7.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "sass": "^1.62.1",
+    "storybook": "^7.0.7"
+  }
 }
