feat: add NProgress bar

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "next": "13.3.0",
     "next-i18next": "^13.2.2",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
@@ -50,6 +51,7 @@
     "@storybook/nextjs": "^7.0.9",
     "@storybook/react": "^7.0.9",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/nprogress": "^0.2.0",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
