--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-social-icons": "^5.15.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "remove": "^0.1.5",
