--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006 -s ../public",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
@@ -51,11 +52,14 @@
     "@storybook/nextjs": "^7.0.9",
     "@storybook/react": "^7.0.9",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-plugin-storybook": "^0.6.11",
+    "jest": "^29.5.0",
     "sass": "^1.62.1",
     "storybook": "^7.0.7"
   }
