--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006 -s ../public",
     "build-storybook": "storybook build",
-    "test": "jest --watch",
+    "test": "jest --watch ",
     "coverage": "jest --coverage"
   },
   "dependencies": {
@@ -47,6 +47,8 @@
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
     "@storybook/addon-essentials": "^7.0.9",
     "@storybook/addon-interactions": "^7.0.9",
     "@storybook/addon-links": "^7.0.9",
@@ -60,10 +62,13 @@
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.5.0",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3",
     "sass": "^1.62.1",
-    "storybook": "^7.0.7"
+    "storybook": "^7.0.7",
+    "ts-jest": "^29.1.0"
   }
 }
