--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "18.15.11",
@@ -25,16 +24,13 @@
     "eslint-config-next": "13.3.0",
     "i18next": "^22.4.15",
     "i18next-http-backend": "^2.2.0",
-    "jwt-decode": "^3.1.2",
     "next": "13.3.0",
     "next-i18next": "^13.2.2",
-    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-social-icons": "^5.15.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
@@ -47,6 +43,7 @@
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
     "@storybook/addon-essentials": "^7.0.9",
@@ -67,8 +64,11 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next-router-mock": "^0.9.3",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
     "sass": "^1.62.1",
     "storybook": "^7.0.7",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "webpack": "^5.82.1"
   }
 }
