refactor: storybook config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,9 @@
       {
         "allowExpressions": true
       }
-    ]
+    ],
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-return": "off"
   },
   "ignorePatterns": [
     "**/*.js"
