--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
       }
     ],
     "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-unsafe-return": "off"
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/unbound-method": "off"
   },
   "ignorePatterns": [
     "**/*.js"
