--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest --watch ",
-    "coverage": "jest --coverage"
+    "test": "jest --watch",
+    "coverage": "jest --coverage --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
